# polish-notation

./: .clang-format  .gitignore  CMakeLists.txt  README.md
data_structures/node/: node.h
data_structures/stack/: stack.h
include/: CMakeLists.txt
include/polish_notation/: CMakeLists.txt  utility.h
include/polish_notation/data_structures/node/: CMakeLists.txt  node.h  node.ipp
include/polish_notation/data_structures/queue/: CMakeLists.txt  queue.h  queue.ipp
include/polish_notation/data_structures/stack/: CMakeLists.txt  stack.h  stack.ipp
include/polish_notation/exceptions/invalid_field_info_exception/: invalid_field_info_exception.h
include/polish_notation/exceptions/invalid_function/: invalid_function.h
include/polish_notation/exceptions/type_conversion_error/: type_conversion_error.h  type_conversion_error.ipp
include/polish_notation/parser/: parser.h
include/polish_notation/polish_calculation/: polish_calculation.h
include/polish_notation/renderer/: field_generator.h
include/polish_notation/shunting_yard_alg/: shunting_yard_alg.h
include/polish_notation/token/: token.h  token.ipp
include/polish_notation/utility/: utility.h
src/: CMakeLists.txt  polish_notation.cpp
src/data_structures/node/: node.h  node.ipp
src/data_structures/stack/: stack.h  stack.ipp
src/exceptions/: CMakeLists.txt
src/exceptions/invalid_field_info_exception/: CMakeLists.txt  invalid_field_info_exception.cpp
src/exceptions/invalid_function/: CMakeLists.txt  invalid_function.cpp
src/parser/: CMakeLists.txt  parser.cpp  parser.h
src/polish_calculation/: CMakeLists.txt  polish_calculation.cpp  polish_calculation.h
src/renderer/: CMakeLists.txt  field_generator.cpp  field_generator.h  field_info.h
src/renderer/console_renderer/: CMakeLists.txt  console_renderer.cpp  console_renderer.h
src/renderer/console_renderer/menu_data_container/: CMakeLists.txt
src/renderer/console_renderer/menu_data_container/include/: menu_data_container.h
src/renderer/console_renderer/menu_data_container/src/: menu_data_container.cpp
src/shunting_yard_alg/: CMakeLists.txt  shunting_yard_alg.cpp  shunting_yard_alg.h  shunting_yard_alg.ipp
src/token/: CMakeLists.txt  token.cpp  token_data.cpp
src/user_err_mess_printer/: CMakeLists.txt
src/user_err_mess_printer/include/: user_err_mess_printer.h
src/user_err_mess_printer/src/: user_err_mess_printer.cpp
src/user_input/: CMakeLists.txt
src/user_input/include/: user_input.h
src/user_input/src/: user_input.cpp
tests/: CMakeLists.txt
tests/data_structures/: CMakeLists.txt
tests/data_structures/node/: CMakeLists.txt
tests/data_structures/queue/: CMakeLists.txt  queue_tests.cpp
tests/data_structures/stack/: stack_tests.cpp
tests/parser/: CMakeLists.txt  parser_tests.cpp
tests/polish_calculation/: CMakeLists.txt  polish_calculation_tests.cpp
tests/shunting_yard_alg/: CMakeLists.txt  shunting_yard_alg_tests.cpp
tests/src/data_structures/: CMakeLists.txt
tests/src/parser/: parser_tests.cpp
tests/token/: CMakeLists.txt
tests/token/token_test/: CMakeLists.txt  token_test.cpp  token_test.h
(+21 files in other folders)
